--- a/education.html
+++ b/education.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <!--CSS LINK-->
     <link href="mission2.css" rel="stylesheet" />
-    <script src="script.js" defer></script>
     <!--FONT AWESOME AMD GOGGLE FONT LINK-->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -32,13 +32,43 @@
               <li><a id="#" href="mission2.html">Home</a></li>
               <li><a id="aboutme" href="aboutme.html">About Me</a></li>
               <li><a id="education" href="education.html">Education</a></li>
-              <li><a id="experience" href="education.html">Experience</a></li>
-              <li><a href="Hayley Smith CV.pdf" download="Hayley Smith CV">Curriculum Vitae</a></li>
+              <li><a id="experience" href="experience.html">Experience</a></li>
+              <li>
+                <a href="Hayley-Smith-CV.pdf" download="Hayley Smith CV"
+                  >Curriculum Vitae</a
+                >
+              </li>
               <li><a id="contact" href="contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
       </div>
+    <!--SUPERHERO SECTION-->
+    <div class="superhero">
+      <div class="content">
+        <div class="superhero-main">
+          <div class="superhero-text">
+              <h1>Education</h1>
+              <ul>
+                <li><b>Full Stack Development Certificate</b> <a href="https://www.missionreadyhq.com/">Mission Ready</a><i>(in progress)</i></li>
+                <li><b>Bacholor of Arts in Psychology</b> <a href="https://www.massey.ac.nz/">Massey University</a><i>(in progress)</i></li>
+                <li><b>Diploma in Pyschology</b> <a href="https://www.massey.ac.nz/">Massey University </a><i>(2020)</i></li>
+                <li><b>Certificate in Health Science</b> <a href="https://www.sit.ac.nz/">Southerm Insitute of Technology</a><i>(2014)</i></li>
+                <li><b>Foudnation Certificate</b> <a href="https://www.unitec.ac.nz/">Unitec</a><i>(2012)</i></li>
+                <li><b>Business Administration Certificate</b><a href="https://www.nzma.ac.nz/">NZMA</a><i>(2011)</i></li>
+                <li><b>Computing Certificate</b> <a href="https://www.futurecol.ac.nz.">FutureCol</a><i>(2008)</i></li>
+              </ul>              
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+      <!--SHAPE-IMAGE-->
+      <img src="MR1-Images/shape.png" class="square" alt="" />
+      <!--FLASHLIGHT EFFECT-->
+      <div id="spotlight"></div>
+      <!--JS SCRIPT-->
+      <script src="script.js" defer></script>
     </header>
   </body>
   <!--FOOTER-->
