--- a/experience.html
+++ b/experience.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link href="mission1.css" rel="stylesheet" />
-    <script src="script.js" defer></script>
+    <!--CSS LINK-->
+    <link href="mission2.css" rel="stylesheet" />
     <!--FONT AWESOME AMD GOGGLE FONT LINK-->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -33,12 +33,41 @@
               <li><a id="aboutme" href="aboutme.html">About Me</a></li>
               <li><a id="education" href="education.html">Education</a></li>
               <li><a id="experience" href="experience.html">Experience</a></li>
-              <li><a href="Hayley Smith CV.pdf" download="Hayley Smith CV">Curriculum Vitae</a></li>
+              <li>
+                <a href="Hayley-Smith-CV.pdf" download="Hayley Smith CV"
+                  >Curriculum Vitae</a
+                >
+              </li>
               <li><a id="contact" href="contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
       </div>
+    <!--SUPERHERO SECTION-->
+    <div class="superhero">
+      <div class="content">
+        <div class="superhero-main">
+          <div class="superhero-text">
+            <h1>Experience</h1>
+            <ul>
+              <li><b>Donor Care Co-Ordinator</b> Cancer Society <i>(June 2021 - October 2023 )</i></li>
+              <li><b>Owner</b> Mindful Beauty <i>(May 2020 - June 2022)</i></li>
+              <li><b>Independent Sales Consultant</b> Isagenix, Younique & Mary Kay <i>(August 2019 - 2020)</i></li>
+              <li><b>Customer Service Representative</b> NZ Post Group<i>(August 2016 - November 2017)</i></li>
+              <li><b>Home-based Operator</b> Unity4<i>(January 2016 - August 2016)</i></li>
+              <li><b>Tele-fundraiser</b> Greenpeace <i>(June 2012 - January 2013)</i></li>
+              <li><b>Direct Marketer</b> HRV<i>(October 2010 - April 2011)</i></li>
+            </ul>   
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--SHAPE-IMAGE-->
+      <img src="MR1-Images/shape.png" class="square" alt="" />
+    <!--FLASHLIGHT EFFECT-->
+      <div id="spotlight"></div>
+    <!--JS SCRIPT-->
+    <script src="script.js" defer></script>
     </header>
   </body>
   <!--FOOTER-->
