--- a/mission2.html
+++ b/mission2.html
@@ -5,22 +5,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <!--CSS LINK-->
     <link href="mission2.css" rel="stylesheet" />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      crossorigin="anonymous"
-    />
-    <title>About Me</title>
 
-    <!--INTERNAL CSS STYLE-->
-    <style>
-      .superhero-image {
-        margin-top: 20px;
-        width: 370px;
-        height: 370px;
-        border: 3px solid white;
-      }
-    </style>
+    <!--FONT AWESOME AMD GOGGLE FONT LINK-->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
   <body>
     <!--HEADER-->
@@ -36,7 +35,7 @@
               <li><a id="education" href="education.html">Education</a></li>
               <li><a id="experience" href="experience.html">Experience</a></li>
               <li>
-                <a href="Hayley Smith CV.pdf" download="Hayley Smith CV"
+                <a href="Hayley-Smith-CV.pdf" download="Hayley Smith CV"
                   >Curriculum Vitae</a
                 >
               </li>
@@ -52,33 +51,31 @@
       <div class="content">
         <div class="superhero-main">
           <div class="superhero-text">
-            <h1>About Me</h1>
+            <h2>Hello, I am Hayley.</h2>
+            <h1>Full Stack Developer & Psychology Student</h1>
             <p>
-              I am a passionate individual who can quickly establish rapport
-              with clients and colleagues of all backgrounds.
+              "My passion for people and eagerness to learn is what I believe
+              makes me a valuable member of any team."
             </p>
+            <p>-Haylz</p>
             <br />
-            <p>
-              I thoroughly enjoy brainstorming ideas and troubleshooting issues.
-            </p>
-            <br />
-            <p>I love a good challenge and work well with others.</p>
-            <br />
-            <img
-              class="superhero-image"
-              src="MR1 Images/justhaylz.jpg"
-              alt="me"
-            />
-            <!-- COULDNT GET IT TO WORK <div class="superhero-icons">
-                        <a href="https://www.facebook.com/haylzb2/"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.linkedin.com/in/hayley-smith-818a3513a/"><i class="fa-brands fa-linkedin"></i></a>
-                    </div> -->
+            <div class="superhero-image">
+              <img src="MR1-Images/software-developer.jpg" alt="developer" />
+              <img src="MR1-Images/psychology.jpg" alt="psychology" />
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </body>
 
+
+    <!--SHAPE-IMAGE-->
+    <img src="MR1-Images/shape.png" class="square" alt="" />
+    <!--FLASHLIGHT EFFECT-->
+    <div id="spotlight"></div>
+    <!--JS SCRIPT-->
+    <script src="script.js" defer></script>
+  </body>
   <!--FOOTER-->
   <footer>
     <h5>Copyright 2024 by Hayley Smith. All rights reserved.</h5>
