--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                 <label for="message">Message</label>
                 <span>Message</span>
               </div>
-              <input type="submit" class="btn" onclick="submit()"></input>
+              <button type="submit" class="btn" onclick="submit()">Submit</button>
             </form>
           </div>
         </div>
